--- a/recipes/schnitzel.html
+++ b/recipes/schnitzel.html
@@ -8,8 +8,33 @@
     <p>
     <img src="image.png"  
     </p>  
-    <p> <strong> Description of recipe: Wiener Schnitzel </strong>  </p>
+    <p> <strong> Wiener Schnitzel </strong>  </p>
     <p>
         <strong>'Wiener'</strong> this word comes from the world 'Wien', which is the Austrian
         city called Vienna. <strong>'Schnitzel'</strong> means basically meat in a crust.
     </p>  
+    <p><h2><strong>Ingredients</strong></h2></p>
+    <p>
+        <ul>
+            <li>2 pounds veal</li>
+            <li>1 coup all purpose flour</li>
+            <li>4 eggs</li>
+            <li>1 tablespoon vegetable oil</li>
+            <li>salt and pepper to taste</li>
+            <li>4 cups bread crumbs</li>
+            <li>half cup oil for frying</li>
+        </ul>
+    </p>
+        <p> <strong>Steps</strong>
+            <ol>
+                <li>Cut the veal into steaks, about as thick as your finger. Dredge in flour. 
+                    In a shallow dish, beat the eggs with 1 tablespoon oil, salt and pepper. Coat the veal with egg mixture, then with bread crumbs.</li>
+                <li>Heat 1/4 cup oil in a heavy skillet over medium heat. Fry veal until golden brown, about 5 minutes on each side.
+
+                </li>
+
+
+            </ol>
+
+
+        </p>
