extra 2 recipes without links

--- a/index.html
+++ b/index.html
@@ -5,4 +5,15 @@
         <title>Recipe project</title>
     </head>
 <h1>Odin recipes</h1> 
-<a href="recipes/schnitzel.html">Schnitzel recipe</a>       
+   
+
+
+<ul>
+        <li><a href="recipes/schnitzel.html">Schnitzel recipe</a> </li>
+        <li>Strawberry pie</li>
+        <li>Crepes</li>
+
+    </ul>
+    
+
+      
