Added <body> element and made the code easier to read

--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
         <meta charset="UTF-8">
         <title>Recipe project</title>
     </head>
-<h1>Odin recipes</h1> 
+<body> 
+    <h1>Odin recipes</h1> 
    
-
-
-<ul>
+    <ul>
         <li><a href="recipes/schnitzel.html">Schnitzel recipe</a> </li>
         <li>Strawberry pie</li>
         <li>Crepes</li>
@@ -16,4 +15,7 @@
     </ul>
     
 
+
+
+</body>
       
