Added the second recipe and made some changes in schnitzel_html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    
     <ul>
         <li><a href="recipes/schnitzel.html">Schnitzel recipe</a> </li>
-        <li>Strawberry pie</li>
+        <li><a href="recipes/strawbpie.html"> Strawberry pie</a> </li>
         <li>Crepes</li>
 
     </ul>
