--- a/recipes/schnitzel.html
+++ b/recipes/schnitzel.html
@@ -2,19 +2,21 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Recipe</title>
+        <title>Schnitzel recipe</title>
     </head>
+<body>
+
+   
     <h1>Schnitzel</h1>    
     <p>
-    <img src="image.png"  
+    <img src="image.png"  alt="A yummy Schnitzel">
     </p>  
     <p> <strong> Wiener Schnitzel </strong>  </p>
     <p>
         <strong>'Wiener'</strong> this word comes from the world 'Wien', which is the Austrian
         city called Vienna. <strong>'Schnitzel'</strong> means basically meat in a crust.
     </p>  
-    <p><h2><strong>Ingredients</strong></h2></p>
-    <p>
+    <h2><strong>Ingredients</strong></h2>
         <ul>
             <li>2 pounds veal</li>
             <li>1 coup all purpose flour</li>
@@ -24,8 +26,7 @@
             <li>4 cups bread crumbs</li>
             <li>half cup oil for frying</li>
         </ul>
-    </p>
-        <p> <strong>Steps</strong>
+        <h3><strong>Steps</strong></h3>
             <ol>
                 <li>Cut the veal into steaks, about as thick as your finger. Dredge in flour. 
                     In a shallow dish, beat the eggs with 1 tablespoon oil, salt and pepper. Coat the veal with egg mixture, then with bread crumbs.</li>
@@ -37,4 +38,5 @@
             </ol>
 
 
-        </p>
+        
+    </body>     
