Added the third recipe

--- a/recipes/schnitzel.html
+++ b/recipes/schnitzel.html
@@ -11,7 +11,7 @@
     <p>
     <img src="image.png"  alt="A yummy Schnitzel">
     </p>  
-    <p> <strong> Wiener Schnitzel </strong>  </p>
+    <h2> <strong> Wiener Schnitzel </strong>  </h2>
     <p>
         <strong>'Wiener'</strong> this word comes from the world 'Wien', which is the Austrian
         city called Vienna. <strong>'Schnitzel'</strong> means basically meat in a crust.
@@ -35,8 +35,5 @@
                 </li>
 
 
-            </ol>
-
-
-        
+            </ol>      
     </body>     
