--- a/index.html
+++ b/index.html
@@ -10,12 +10,7 @@
     <ul>
         <li><a href="recipes/schnitzel.html">Schnitzel recipe</a> </li>
         <li><a href="recipes/strawbpie.html"> Strawberry pie</a> </li>
-        <li>Crepes</li>
-
+        <li><a href="recipes/crepes.html"> Crepes</a></li>
     </ul>
-    
-
-
-
 </body>
       
