--- a/recipes/strawbpie.html
+++ b/recipes/strawbpie.html
@@ -7,7 +7,7 @@
 <body>
     <h1><strong>Strawberry pie</strong></h1>
     <img src="strawb.png" alt="A sweet strawberry pie">
-    <p><strong>Description</strong></p>
+    <h2><strong>Description</strong></h2>
     <p>This is my favorite pie. It is very easy to make. 
         I got the recipe many years ago in North Jersey from my grandmother. 
     </p>
@@ -35,15 +35,4 @@
                 Serve each slice of pie with a dollop of whipped cream.
             </li>
         </ol>
-    
-
-
-
-
-
-
-
-
-
-
 </body>
